--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cherrynechou\/laravel-shopping-cart",
+    "name": "cherrynechou\/laravel-simple-cart",
     "description": "this is easy cart for laravel",
     "license": "MIT",
     "authors": [
